<resources>
    <string name="app_name">eBay Catalog Search</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="keywordPlaceholder">Enter Keyword</string>
    <string name="minPricePlaceholder">Minimum Price</string>
    <string name="maxPricePlaceholder">Maximum Price</string>
    <string name="newLabel">New</string>
    <string name="usedLabel">Used</string>
    <string name="unspecifiedLabel">Unspecified</string>
    <string-array name="sortByOptions">
        <item>Best Match</item>
        <item>Price: highest first</item>
        <item>Price + Shipping: Highest first</item>
        <item>Price + Shipping: Lowest first</item>
    </string-array>
</resources>